// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`oid.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 27,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "f1",
                "is_local": true,
                "location": 35,
                "typeName": {
                  "location": 38,
                  "names": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 6 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 22,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 34,
                          "sval": {
                            "sval": "1234",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 8 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 21,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 33,
                          "sval": {
                            "sval": "1235",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 9 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 21,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 33,
                          "sval": {
                            "sval": "987",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 10 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 21,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 33,
                          "sval": {
                            "sval": "-1040",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 11 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 21,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 33,
                          "sval": {
                            "sval": "99999999",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 12 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 21,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 33,
                          "sval": {
                            "sval": "5     ",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 13 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 21,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 33,
                          "sval": {
                            "sval": "   10  ",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 66,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 58,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 78,
                          "sval": {
                            "sval": "	  15 	  ",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 16 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 36,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 28,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 48,
                          "sval": {
                            "sval": "",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 19 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 21,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 33,
                          "sval": {
                            "sval": "    ",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 20 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 21,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 33,
                          "sval": {
                            "sval": "asdfasd",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 21 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 21,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 33,
                          "sval": {
                            "sval": "99asdfasd",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 22 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 21,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 33,
                          "sval": {
                            "sval": "5    d",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 23 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 21,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 33,
                          "sval": {
                            "sval": "    5d",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 24 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 21,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 33,
                          "sval": {
                            "sval": "5    5",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 25 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 21,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 33,
                          "sval": {
                            "sval": " - 500",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 26 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 21,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 33,
                          "sval": {
                            "sval": "32958209582039852935",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 27 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 21,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "oid_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 33,
                          "sval": {
                            "sval": "-23582358720398502385",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 28 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 16,
                "relname": "oid_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 30 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 52,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 70,
                          "sval": {
                            "sval": "1234",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 78,
                          "sval": {
                            "sval": "oid",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 52,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 33 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 26,
                          "sval": {
                            "sval": "01XYZ",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 35,
                          "sval": {
                            "sval": "oid",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 34 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeFunction": {
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 35,
                                  "sval": {
                                    "sval": "01XYZ",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 44,
                                  "sval": {
                                    "sval": "oid",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "pg_input_error_info",
                                },
                              },
                            ],
                            "location": 15,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 35 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 26,
                          "sval": {
                            "sval": "9999999999",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 40,
                          "sval": {
                            "sval": "oid",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 36 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeFunction": {
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 35,
                                  "sval": {
                                    "sval": "9999999999",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 49,
                                  "sval": {
                                    "sval": "oid",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "pg_input_error_info",
                                },
                              },
                            ],
                            "location": 15,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 37 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 54,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 72,
                          "sval": {
                            "sval": " 1 2  4 ",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 84,
                          "sval": {
                            "sval": "oidvector",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 54,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 40 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 26,
                          "sval": {
                            "sval": "01 01XYZ",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 38,
                          "sval": {
                            "sval": "oidvector",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 41 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeFunction": {
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 35,
                                  "sval": {
                                    "sval": "01 01XYZ",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 47,
                                  "sval": {
                                    "sval": "oidvector",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "pg_input_error_info",
                                },
                              },
                            ],
                            "location": 15,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 42 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 26,
                          "sval": {
                            "sval": "01 9999999999",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 43,
                          "sval": {
                            "sval": "oidvector",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 43 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeFunction": {
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 35,
                                  "sval": {
                                    "sval": "01 9999999999",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 52,
                                  "sval": {
                                    "sval": "oidvector",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "pg_input_error_info",
                                },
                              },
                            ],
                            "location": 15,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 44 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "o",
                },
                "inh": true,
                "location": 18,
                "relname": "oid_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "o",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "o",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 34,
                },
              },
              "location": 39,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 1234,
                  },
                  "location": 41,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 46 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "o",
                },
                "inh": true,
                "location": 18,
                "relname": "oid_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "o",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "o",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 34,
                },
              },
              "location": 39,
              "name": [
                {
                  "String": {
                    "sval": "<>",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 42,
                  "sval": {
                    "sval": "1234",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 48 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "o",
                },
                "inh": true,
                "location": 18,
                "relname": "oid_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "o",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "o",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 34,
                },
              },
              "location": 39,
              "name": [
                {
                  "String": {
                    "sval": "<=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 42,
                  "sval": {
                    "sval": "1234",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 50 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "o",
                },
                "inh": true,
                "location": 18,
                "relname": "oid_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "o",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "o",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 34,
                },
              },
              "location": 39,
              "name": [
                {
                  "String": {
                    "sval": "<",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 41,
                  "sval": {
                    "sval": "1234",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 52 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "o",
                },
                "inh": true,
                "location": 18,
                "relname": "oid_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "o",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "o",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 34,
                },
              },
              "location": 39,
              "name": [
                {
                  "String": {
                    "sval": ">=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 42,
                  "sval": {
                    "sval": "1234",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 54 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "o",
                },
                "inh": true,
                "location": 18,
                "relname": "oid_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "o",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "o",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 34,
                },
              },
              "location": 39,
              "name": [
                {
                  "String": {
                    "sval": ">",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 41,
                  "sval": {
                    "sval": "1234",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`oid.sql > line 56 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "oid_tbl",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;
